metadata-sfdx/force-app/main/default/objects/FunnelStepSetting__mdt/FunnelStepSetting__mdt.object-meta.xml
<CustomObject>
    <label>Funnel Step Setting</label>
    <pluralLabel>Funnel Step Settings</pluralLabel>
</CustomObject>