metadata-sfdx/force-app/main/default/objects/FunnelStepSetting__mdt/fields/AvailableforOutreachTypes__c.field-meta.xml
<CustomField>
    <fullName>AvailableforOutreachTypes__c</fullName>
    <description>This field depicts the outreach types for which the funnel step should be available</description>
    <label>Available for Outreach Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>