metadata-sfdx/force-app/main/default/objects/FunnelStepSetting__mdt/fields/EnrollmentOutreachTypeCanChange__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentOutreachTypeCanChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Outreach Type Can Change</label>
    <type>Checkbox</type>
</CustomField>