metadata-sfdx/force-app/main/default/objects/FunnelStepSetting__mdt/fields/IsMilestone__c.field-meta.xml
<CustomField>
    <fullName>IsMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Milestone</label>
    <type>Checkbox</type>
</CustomField>